<resources>
    <string name="app_name">operation</string>
    <string name="activity_login">activity_login</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_username">用户名/手机号</string>
    <string name="prompt_phone">请输入手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">"欢迎 !"</string>
    <string name="invalid_username">用户没注册</string>
    <string name="invalid_password">密码必须大于5个字母</string>
    <string name="login_failed">"登录失败"</string>
    <string name="title_activity_init_account">请设置密码</string>
    <string name="verify_code">请输入验证码</string>
    <string name="set_new_password">请设置密码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="set_confirm">确认</string>
    <string name="send_code">send_code</string>
    <string name="phone">phone</string>
    <string name="newpassword">newpassword</string>
    <string name="title_activity_dilivery_tab">DiliveryTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_delivery_tab">DeliveryTabActivity</string>
    <string name="tabhost">tabhost</string>
    <string name="tabcontent">tabcontent</string>
    <string name="lost_password">找回密码</string>
    <string name="bt_ok">确认</string>
    <!--    add-->

    <string name="title_style">历史任务</string>
    <string name="title_example">我</string>
    <string name="title_practice">今日任务</string>

    <string name="title_activity_index_main">Refresh</string>

    <string name="fragment_refresh_styles">风格展示</string>
    <string name="fragment_refresh_example">使用示例</string>
    <string name="fragment_refresh_practice">实战</string>

    <string name="item_example_number_title">第%02d条数据</string>
    <string name="item_example_number_abstract">这是测试的第%02d条数据</string>

    <string name="fragment_example_empty_layout">空页面</string>
    <string name="fragment_example_empty_layout_inner">空页面-内部嵌套</string>
    <string name="fragment_example_empty_layout_outer">空页面-外部嵌套</string>
    <string name="fragment_example_bottom_sheet">Bottom Sheet 对话框</string>
    <string name="index_example_bottom_sheet">BottomSheet内部使用加载更多</string>

    <string name="index_example_empty">整合空页面</string>

    <string name="instant_message_input_hint">输入消息</string>
    <string name="instant_message_send">发送</string>

    <string name="fragment_practice_instant">即时通讯</string>


    <string name="setting_safe">安全设置</string>
    <string name="setting_map">地图设置</string>
    <string name="setting_logout">退出登录</string>
</resources>
